# wallet-ui

./: .gitignore  HOW_TO_RUN.md  README.md  RUNNING_THE_PROJECT_P2P.txt  index.html  package-lock.json  package.json  v  vite.config.js
rust-blockchain/: Cargo.toml  HOW-TO-RUN.txt  Running Blockchain.md  api_test.ps1  blockchain_gui.py  build_with_vcvars.cmd  build_with_vcvars_and_libclang.cmd  find_libclang.ps1  find_vcvars.ps1  run_build_with_msvc.ps1  run_cli_sequence.ps1  run_node_with_vcvars.cmd  stop_and_restart_node.ps1
rust-blockchain/blockchain_ledger_db.bak/: 000008.sst  000013.sst  IDENTITY  LOG  LOG.old.1781002351080087  LOG.old.1781002508258546  LOG.old.1781002667941919  LOG.old.1781004004443604  MANIFEST-000015
rust-blockchain/ledger/: 000008.sst  000013.sst  IDENTITY  LOG  LOG.old.1781440424851987  LOG.old.1781441352574743  LOG.old.1781441574827229  MANIFEST-000019
rust-blockchain/src/: cli.rs  consensus.rs  main.rs  p2p.rs  price_feed.rs
src/: App.jsx  main.jsx  routes.jsx
src/components/blockchain/: BlockCard.jsx  BlockList.jsx  NetworkStatus.jsx
src/components/charts/: PortfolioChart.jsx
src/components/common/: Header.jsx  LoadingSpinner.jsx  PageHeader.jsx  ProtectedRoute.jsx  (+2 more)
src/context/: AuthContext.jsx  ThemeContext.jsx  WalletContext.jsx
src/data/: mockBlocks.json  mockHarnessLogs.json  mockPortfolio.json  mockTransactions.json  mockValidators.json
src/hooks/: useBlockchain.js  useCommodityFeed.js
src/styles/: accessibility.css  globals.css  themes.css  variables.css
src/utils/: constants.js  formatter.js  mockDelay.js
(+27 files in other folders)
