[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blockchain-node"
path = "src/main.rs"

[[bin]]
name = "blockchain-cli"
path = "src/cli.rs"

[dependencies]
sha2 = "0.10"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.0"
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"
wasmi = "0.32"
rocksdb = "0.21"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
k256 = { version = "0.13", features = ["ecdsa", "serde"] }
trie-db = "0.28"
hash-db = "0.16"
reference-trie = "0.29"
actix-ws = "0.2"
