[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blockchain-node"
path = "src/main.rs"

[[bin]]
name = "blockchain-cli"
path = "src/cli.rs"

[dependencies]
sha2 = "0.10"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.0"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rocksdb = "0.21"
datafusion = "42.0.0"
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
actix-cors = "0.7"